--- a/plugin_calanda/build.gradle
+++ b/plugin_calanda/build.gradle
@@ -7,13 +7,11 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.pluginstudy"
+        applicationId "com.voyah.plugin_calanda"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
-        versionName "1.1"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionName "1.0"
     }
 
     buildTypes {
@@ -22,6 +20,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    def name = "calander.apk"
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = name
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -35,7 +41,4 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(path: ':pluginrule')
 
-    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
