--- a/plugin_calanda/src/main/AndroidManifest.xml
+++ b/plugin_calanda/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PluginStudy">
         <activity android:name=".TopActivity"></activity>
+        <activity android:name=".SecondActivity"></activity>
     </application>
 
 </manifest>
