--- a/plugin_calanda/src/main/AndroidManifest.xml
+++ b/plugin_calanda/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PluginStudy">
-        <activity android:name=".TopActivity"></activity>
-        <activity android:name=".SecondActivity"></activity>
+        <service android:name=".CalandaService"></service>
+        <activity android:name=".TopActivity" />
+        <activity android:name=".SecondActivity" />
     </application>
 
 </manifest>
